--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,7 +5,7 @@ include mixins/home/landing/AboutProviders
 include mixins/home/landing/AboutMobileApps
 include mixins/home/landing/Testimonial
 include mixins/home/landing/Article
-//- include mixins/home/landing/Footer
+include mixins/home/landing/Footer
 
 
 append variables
@@ -21,4 +21,4 @@ append content
   +AboutMobileApps
   +Testimonial
   +Articles
-  //- +Footer
+  +Footer
