--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -1,7 +1,7 @@
 mixin HeroHeader
   section.py-0
+    +Background({ image: `${CWD}assets/img/illustrations/dot.png`, attrs: { style: { 'background-position': 'left', 'background-size': '100px 115px',} }, className: '' }) 
     .container.position-relative
-      img.img-fluid(src=`${CWD}assets/img/illustrations/element.png`  alt='' style="position:absolute;left:-222px;top:150px;")
       .row.align-items-center
         .col-md-5.col-lg-6.order-md-1.pt-8
           img.img-fluid(src=`${CWD}assets/img/illustrations/hero-header.png`  alt='') 
