--- a/src/pug/mixins/home/landing/Testimonial.pug
+++ b/src/pug/mixins/home/landing/Testimonial.pug
@@ -1,22 +1,21 @@
 mixin Items(config)
   .col-12
-    .card.text-white.text-center
-      img.img-fluid(src=`${CWD}assets/img/illustrations/${config.image}` width="4500px" alt='')
-      .card-img-overlay.p-7
-        h2.fw-bold.text-white=config.title
+    .card.text-white.bg-primary-gradient
+      .card-body.p-4.p-md-4.p-lg-7
+        h2.fw-bold.text-white.text-center=config.title
         hr.mx-auto(style="height:2px;width:50px")
-        .d-flex.align-items-center.text-start.mt-5
-          
-          img(src=`${CWD}assets/img/gallery/user.png` width="120" alt='').img-fluid.me-4.me-md-2.me-lg-4
-          .w-25
+        .d-md-flex.align-items-md-center.mt-5.text-center.text-md-start
+          img(src=`${CWD}assets/img/gallery/user.png` width="120" alt='').img-fluid.me-4.me-md-3.me-lg-4
+          .w-md-25.my-3
             h5.mb-0.fw-medium.text-white=config.name
             p.fw-normal.mb-0=config.designation
-          .w-75
-            p.card-text.ms-5=config.text
+          .w-md-75
+            p.card-text.ms-md-5=config.text
 
 mixin Testimonial
   section.py-8
     .container
+      +Background({ image: `${CWD}assets/img/illustrations/dot.png`, attrs: { style: { 'background-position': 'right top', 'background-size': '100px 115px','margin-left':'-25px'} }, className: 'z-index-1' })
       #carouselExampleDark.carousel.slide(data-bs-ride='carousel')
         .carousel-inner
           .carousel-item.active(data-bs-interval='10000')
@@ -34,23 +33,21 @@ mixin Testimonial
               +Items({image:'testimonial-bg.png',title:'What our customer are saying', name:'Viezh Robert',designation:'arsaw, Poland', 
                 text:'“Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely.Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely.”',
               })
-             
-              
+                   
         .row.px-3.px-md-0.mt-4
           .col-12.position-relative
-           
-            a.carousel-control-prev.carousel-icon.z-index-2(href='#carouselExampleDark' role='button' data-bs-slide='prev')
-              span.carousel-control-prev-icon(aria-hidden='true')
-              span.visually-hidden Previous
-
+          
             ol.carousel-indicators
               li.active(data-bs-target='#carouselExampleDark' data-bs-slide-to='0')
               li(data-bs-target='#carouselExampleDark' data-bs-slide-to='1')
               li(data-bs-target='#carouselExampleDark' data-bs-slide-to='2')
          
-            a.carousel-control-next.carousel-icon.z-index-2(href='#carouselExampleDark' role='button' data-bs-slide='next')
-              span.carousel-control-next-icon(aria-hidden='true')
-              span.visually-hidden Next
+            a.carousel-control-prev.carousel-icon.z-index-2(href='#carouselExampleDark' role='button' data-bs-slide='prev')
+              span.carousel-control-prev-icon(aria-hidden='true')
+              span.visually-hidden Previous
+
+            
+            
 
 
 
