--- a/src/scss/theme/helpers/_background.scss
+++ b/src/scss/theme/helpers/_background.scss
@@ -64,4 +64,6 @@
 .bg-light-gradient {
   background: linear-gradient(180deg, rgba(236, 240, 253, 0) 0%, rgba(236, 240, 253, 0.53) 14.32%, #ECF0FD 45.83%, rgba(236, 240, 253, 0.43) 84.33%, rgba(236, 240, 253, 0) 100%);
 }
-
+.bg-primary-gradient{
+  background: linear-gradient(208.18deg, #67C3F3 9.05%, #5A98F2 76.74%);
+}
