--- a/src/pug/mixins/home/landing/Testimonial.pug
+++ b/src/pug/mixins/home/landing/Testimonial.pug
@@ -41,13 +41,13 @@ mixin Testimonial
               li.active(data-bs-target='#carouselExampleDark' data-bs-slide-to='0')
               li(data-bs-target='#carouselExampleDark' data-bs-slide-to='1')
               li(data-bs-target='#carouselExampleDark' data-bs-slide-to='2')
-         
+           
             a.carousel-control-prev.carousel-icon.z-index-2(href='#carouselExampleDark' role='button' data-bs-slide='prev')
               span.carousel-control-prev-icon(aria-hidden='true')
               span.visually-hidden Previous
-
-            
-            
+            a.carousel-control-next.carousel-icon.z-index-2(href='#carouselExampleDark' role='button' data-bs-slide='next')
+              span.carousel-control-next-icon(aria-hidden='true')
+              span.visually-hidden Next
 
 
 
