--- a/src/pug/mixins/home/landing/Footer.pug
+++ b/src/pug/mixins/home/landing/Footer.pug
@@ -6,7 +6,6 @@ mixin FooterList(...items)
 
 mixin PreFooter
   +Section.py-2
-    
     .row 
       .col-12
         .text-center
@@ -17,12 +16,12 @@ mixin PreFooter
             |&nbsp;by&nbsp;
             a(href='https://themewagon.com/' target='_blank').text-black ThemeWagon 
             
-
 mixin Footer
-  section.py-6.pt-7
-    +Background({ image: `${CWD}assets/img/illustrations/footer-bg.png`, attrs: { style: { 'background-position': 'center center', 'background-size': 'cover'} }, className: '' })  
+  section.py-6.pt-7.bg-primary-gradient
+    +Background({ image: `${CWD}assets/img/illustrations/dot.png`, attrs: { style: { 'background-position': 'left bottom', 'background-size': 'auto','filter':'contrast(1.5)'} }, className: '' })  
+    +Background({ image: `${CWD}assets/img/illustrations/dot-2.png`, attrs: { style: { 'background-position': 'right top', 'background-size': 'auto','margin-top':'-75px'} }, className: '' })  
     .container
-      .row.justify-content-lg-around
+      .row.justify-content-lg-around.z-index-1
         .col-12.col-sm-12.col-lg-3.order-0.order-sm-0
           a(href='#').text-decoration-none
             img.img-fluid.me-2(src=`${CWD}assets/img/icons/footer-logo.png` alt='' )
@@ -32,7 +31,7 @@ mixin Footer
         .col-4.col-lg-3.mb-3.order-2.order-sm-1
           h6.lh-lg.fw-bold.text-light Company
           ul.list-unstyled.mb-md-4.mb-lg-0
-            +FooterList('About','Testimonials','Find a docto','Apps')
+            +FooterList('About','Testimonials','Find a doctor','Apps')
 
         .col-4.col-lg-3.mb-3.order-3.order-sm-2
           h6.lh-lg.fw-bold.text-light  Region 
