--- a/src/pug/mixins/navbars/NavbarTrafalgar.pug
+++ b/src/pug/mixins/navbars/NavbarTrafalgar.pug
@@ -7,7 +7,7 @@ mixin NavbarTrafalgar
       button.navbar-toggler.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
     
-      #navbarSupportedContent.collapse.navbar-collapse.border-top.border-lg-0.mt-4.mt-lg-none
+      #navbarSupportedContent.collapse.navbar-collapse.border-top.border-lg-0.mt-4.mt-lg-0
         ul.navbar-nav.ms-auto.pt-2.pt-lg-0
           li.nav-item
             a.nav-link.fw-bold(aria-current='page', href='#' class= currentPage === 'index' ? 'active' : false ) Home
