--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -1,6 +1,6 @@
 mixin HeroHeader
   section.py-0
-    +Background({ image: `${CWD}assets/img/illustrations/dot.png`, attrs: { style: { 'background-position': 'left', 'background-size': '100px 115px',} }, className: '' }) 
+    +Background({ image: `${CWD}assets/img/illustrations/dot.png`, attrs: { style: { 'background-position': 'left', 'background-size': 'auto','margin-top':'-105px',} }, className: '' }) 
     .container.position-relative
       .row.align-items-center
         .col-md-5.col-lg-6.order-md-1.pt-8
