--- a/src/pug/mixins/home/landing/AboutProviders.pug
+++ b/src/pug/mixins/home/landing/AboutProviders.pug
@@ -1,5 +1,5 @@
 mixin AboutProviders
-  section.py-8
+  section.py-6.py-lg-8#about
     +Background({ image: `${CWD}assets/img/illustrations/dot.png`, attrs: { style: { 'background-position': 'right bottom', 'background-size': 'auto','margin-top':'50px'} }, className: '' })
     .container
       .row.g-xl-0.align-items-center
