--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -11,10 +11,10 @@ mixin HeroHeader
             |for you.
           
           p.mt-3.mb-4.fs-1 Trafalgar provides progressive, and affordable
-            br
+            br.d-none.d-lg-block
             | healthcare, accessible on mobile and online
-            br 
+            br.d-none.d-lg-block 
             |for everyone
-          a.btn.btn-lg.btn-primary.rounded-pill(href='#' role='button')
+          a.btn.btn-lg.btn-primary.rounded-pill.hover-top(href='#' role='button')
             | Learn more
           
