--- a/src/pug/mixins/navbars/NavbarTrafalgar.pug
+++ b/src/pug/mixins/navbars/NavbarTrafalgar.pug
@@ -16,8 +16,8 @@ mixin NavbarTrafalgar
           li.nav-item
             a.nav-link(href='#') Apps
           li.nav-item
-            a.nav-link(href='#') Testimonials
+            a.nav-link(href='#testimonial') Testimonials
           li.nav-item
-            a.nav-link(href='#') About us
+            a.nav-link(href='#about') About us
           
         
