--- a/public/assets/css/theme-rtl.css
+++ b/public/assets/css/theme-rtl.css
@@ -2720,23 +2720,23 @@ progress {
 
 .form-control-lg {
   min-height: calc(1.5em + 1.2rem + 2px);
-  padding: 0.6rem 2.8rem;
+  padding: 0.6rem 1.8rem;
   font-size: 1rem;
   border-radius: 1.25rem;
 }
 
 .form-control-lg::file-selector-button {
-  padding: 0.6rem 2.8rem;
-  margin: -0.6rem -2.8rem;
-  -webkit-margin-end: 2.8rem;
-  margin-inline-end: 2.8rem;
+  padding: 0.6rem 1.8rem;
+  margin: -0.6rem -1.8rem;
+  -webkit-margin-end: 1.8rem;
+  margin-inline-end: 1.8rem;
 }
 
 .form-control-lg::-webkit-file-upload-button {
-  padding: 0.6rem 2.8rem;
-  margin: -0.6rem -2.8rem;
-  -webkit-margin-end: 2.8rem;
-  margin-inline-end: 2.8rem;
+  padding: 0.6rem 1.8rem;
+  margin: -0.6rem -1.8rem;
+  -webkit-margin-end: 1.8rem;
+  margin-inline-end: 1.8rem;
 }
 
 textarea.form-control {
@@ -2824,7 +2824,7 @@ textarea.form-control-lg {
 .form-select-lg {
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
-  padding-right: 2.8rem;
+  padding-right: 1.8rem;
   font-size: 1rem;
 }
 
@@ -3234,7 +3234,7 @@ textarea.form-control-lg {
 .input-group-lg > .form-select,
 .input-group-lg > .input-group-text,
 .input-group-lg > .btn {
-  padding: 0.6rem 2.8rem;
+  padding: 0.6rem 1.8rem;
   font-size: 1rem;
   border-radius: 1.25rem;
 }
@@ -4108,7 +4108,7 @@ fieldset:disabled .btn {
 }
 
 .btn-lg, .btn-group-lg > .btn {
-  padding: 0.6rem 2.8rem;
+  padding: 0.6rem 1.8rem;
   font-size: 1rem;
   border-radius: 0.625rem;
 }
@@ -4548,8 +4548,8 @@ fieldset:disabled .btn {
 }
 
 .btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split {
-  padding-left: 2.1rem;
-  padding-right: 2.1rem;
+  padding-left: 1.35rem;
+  padding-right: 1.35rem;
 }
 
 .btn-group-vertical {
@@ -17739,9 +17739,9 @@ label {
 .hover-top {
   -webkit-transform: translateY(0) translateZ(0);
   transform: translateY(0) translateZ(0);
-  -webkit-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .hover-top.hover-top-shadow-lg:hover, .hover-top.hover-top-shadow-lg:focus {
