--- a/src/scss/theme/_hover.scss
+++ b/src/scss/theme/_hover.scss
@@ -1,7 +1,7 @@
 /* Hover */
 .hover-top {
   transform: translateY(0) translateZ(0);
-  transition: all 0.3s ease-out;
+  transition: all 0.5s ease;
   &.hover-top-shadow-lg {
     &:hover,
     &:focus {
